fix for action modal to work on mobile

--- a/warp/static/style.css
+++ b/warp/static/style.css
@@ -114,6 +114,7 @@
 
 .zone_action_btn {
     width: 100px;
+    margin: 5px;
 }
 
 .seat_preview {
